test/features/errors/semantic/e1043_invalid_index_type.spl
# E1043: Invalid Index Type

Feature: E1043 - Invalid Index Type
  As a Simple compiler
  I want to detect non-integer types used for array indexing
  So that array indices are valid integers

  Background:
    Given I have the Simple compiler

  Scenario: String index
    When I compile:
      '''
      fn test():
        val arr = [1, 2, 3]
        val x = arr["zero"]  # Error: string index
      '''
    Then I should see error E1043 at line 3
    And the error message should be "index must be of integer type, found `{found}`"
    And the label should indicate "invalid index type"
    And the help should suggest "use an integer type for array indexing"

  Scenario: Float index
    When I compile:
      '''
      fn test():
        val arr = [1, 2, 3]
        val x = arr[1.5]  # Error: float index
      '''
    Then I should see error E1043

  Scenario: Valid integer index
    When I compile:
      '''
      fn test():
        val arr = [1, 2, 3]
        val x = arr[0]  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val arr = [1, 2, 3]
        val x = arr["test"]
      '''
    Then I should see error E1043
    And the error message should contain "잘못된 인덱스 타입"
